Bug 1043489 - Fix MacOS X holding screensaver lock with fullscreen video. r=smichaud, a=lmandel

This ports the fix Chris Pearce made to the windows code in bug 1063995.
We just listen for the 'screen' topic and rely on the notification
machinery to filter duplicates. This avoids incrementing the
lock count on both playback start and fullscreen, and thus waiting
until fullscreen exits after playback stops before enabling the
screensaver again.